streaming/ome/ovenplayerdemo.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ovenplayerdemo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ovenplayerdemo
  template:
    metadata:
      labels:
        app: ovenplayerdemo
    spec:
      containers:
      - name: ovenplayerdemo
        image: docker.io/airensoft/ovenplayerdemo:1.0.0
        ports:
          - name: web
            containerPort: 80
        resources:
          requests:
            cpu: 0m
            memory: 100Mi
          limits:
            cpu: 1000m
            memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: ovenplayerdemo
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.3.15
  selector:
    app: ovenplayerdemo
  ports:
  - name: web
    port: 80
