streaming/ome/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ovenmediaengine
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    # nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/16,1.2.3.4,1.2.3.4
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ome-player.example.duckdns.org
    secretName: ome-player.example.duckdns.org-secret-production
  rules:
  - host: ome-player.example.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ovenplayerdemo
            port:
              name: web
